--- a/ngLog/src/app/components/home/home.component.html
+++ b/ngLog/src/app/components/home/home.component.html
@@ -1,5 +1,39 @@
 <h1>Log Adventure Home</h1>
 
+<div>
+  <form>
+
+    <div class="row">
+      <label class="col" for="logId">Log #</label>
+      <input class="col" type="number" name="logId" [(ngModel)]="newLog.id">
+    </div>
+    <div class="row">
+      <label class="col" for="category">Category</label>
+      <input class="col" type="text" name="category" [(ngModel)]="newLog.category">
+    </div>
+    <div class="row">
+      <label class="col" for="details">Details</label>
+      <input class="col" type="text" name="details" [(ngModel)]="newLog.details">
+    </div>
+    <div class="row">
+      <label class="col" for="duration">Duration</label>
+      <input class="col" type="number" name="duration" [(ngModel)]="newLog.duration">
+    </div>
+    <!-- <div class="row">
+      <label class="col" for="img">Image URL</label>
+      <input class="col" type="text" name="img" [(ngModel)]="newPokemon.img">
+    </div> -->
+    <div class="row">
+      <label class="col" for="activity">activity</label>
+      <textarea class="col" name="actvity" rows="3"
+                cols="40" [(ngModel)]="newLog.activity"></textarea>
+    </div>
+
+
+    <button class="btn btn-success" (click)="addLog(newLog)">Add New Log</button>
+  </form>
+</div>
+
 <div id="logListDiv" *ngIf="! selected">
   <table>
     <thead>
@@ -20,31 +54,16 @@
     </tbody>
   </table>
 
-  <form name="newLog"
-  *ngIf="newLog">
-
-  <div class="row">
-      <input class="col form-control"
-      type="text"
-      name="log"
-      [(ngModel)]="newLog.details" />
-
-      <button class="col-auto btn btn-success"
-      (click)="addLog(newLog)">Add Log</button>
-    </div>
-  </form>
-</div>
-
 <div id="logDetailDiv"
 *ngIf="selected && ! editLog"
 class="container">
 
-<h4>ID: {{selected.id}}</h4>
+<!-- <h4>ID: {{selected.id}}</h4>
   <p>{{selected.category}}</p>
   <div>
 
     <h5>Details:</h5>
-    {{selected.details}}
+    {{selected.details}} -->
 
   </div>
 
