--- a/ngLog/src/app/components/home/home.component.html
+++ b/ngLog/src/app/components/home/home.component.html
@@ -2,39 +2,59 @@
 
 <div>
   <form>
-
     <div class="row">
       <label class="col" for="logId">Log #</label>
-      <input class="col" type="number" name="logId" [(ngModel)]="newLog.id">
+      <input class="col" type="number" name="logId" [(ngModel)]="newLog.id" />
     </div>
     <div class="row">
       <label class="col" for="category">Category</label>
-      <input class="col" type="text" name="category" [(ngModel)]="newLog.category">
+      <input
+        class="col"
+        type="text"
+        name="category"
+        [(ngModel)]="newLog.category"
+      />
     </div>
     <div class="row">
       <label class="col" for="details">Details</label>
-      <input class="col" type="text" name="details" [(ngModel)]="newLog.details">
+      <input
+        class="col"
+        type="text"
+        name="details"
+        [(ngModel)]="newLog.details"
+      />
     </div>
     <div class="row">
       <label class="col" for="duration">Duration</label>
-      <input class="col" type="number" name="duration" [(ngModel)]="newLog.duration">
+      <input
+        class="col"
+        type="number"
+        name="duration"
+        [(ngModel)]="newLog.duration"
+      />
     </div>
     <!-- <div class="row">
       <label class="col" for="img">Image URL</label>
-      <input class="col" type="text" name="img" [(ngModel)]="newPokemon.img">
+      <input class="col" type="text" name="img" [(ngModel)]="newLog.img">
     </div> -->
     <div class="row">
       <label class="col" for="activity">activity</label>
-      <textarea class="col" name="actvity" rows="3"
-                cols="40" [(ngModel)]="newLog.activity"></textarea>
+      <textarea
+        class="col"
+        name="actvity"
+        rows="3"
+        cols="40"
+        [(ngModel)]="newLog.activity"
+      ></textarea>
     </div>
 
-
-    <button class="btn btn-success" (click)="addLog(newLog)">Add New Log</button>
+    <button class="btn btn-success" (click)="addLog(newLog)">
+      Add New Log
+    </button>
   </form>
 </div>
 
-<div id="logListDiv" *ngIf="! selected">
+<div id="logListDiv" *ngIf="!selected">
   <table>
     <thead>
       <tr>
@@ -44,64 +64,67 @@
     </thead>
 
     <tbody>
-      <tr *ngFor="let log of logList" >
-        <td>{{log.id}}</td>
-        <td>{{log.category}}</td>
-        <td><span class="btn btn-danger" (click)="deleteLog(log.id)">Delete Log</span></td>
+      <tr *ngFor="let log of logList">
+        <td>{{ log.id }}</td>
+        <td>{{ log.category }}</td>
+        <td>
+          <span class="btn btn-danger" (click)="deleteLog(log.id)"
+            >Delete Log</span
+          >
+        </td>
 
-        <td><span class="btn btn-outline-info" (click)="selected = log">Log Details</span></td>
+        <td>
+          <span class="btn btn-outline-info" (click)="displayLog(log)"
+            >Log Details</span
+          >
+        </td>
       </tr>
     </tbody>
   </table>
+</div>
 
-<div id="logDetailDiv"
-*ngIf="selected && ! editLog"
-class="container">
+  <div id="logDetailDiv" *ngIf="selected && !editLog" class="container">
 
-<!-- <h4>ID: {{selected.id}}</h4>
-  <p>{{selected.category}}</p>
-  <div>
+    <h4>ID: {{ selected.id }}</h4>
+    <p> {{selected.category}}</p>
+    <h5>Details</h5>
+    <p> {{selected.details}}</p>
 
-    <h5>Details:</h5>
-    {{selected.details}} -->
+    <button class="btn btn-outline-info" (click)="displayTable()">Back</button>
 
+    <button class="btn btn-outline-primary" (click)="setEditLog()">Edit</button>
   </div>
 
-  <button class="btn btn-outline-info"
-  (click)="displayTable()">Back</button>
+  <div id="logEdit" *ngIf="editLog" class="container">
+    <form>
+      <div class="row">
+        <label class="col-auto form-label" for="log">Log</label>
+        <input
+          class="col form-control"
+          type="text"
+          name="editLog"
+          [(ngModel)]="editLog.category"
+        />
+        <br />
+      </div>
+      <div class="row">
+        <label class="col-auto form-label" for="details">Details</label>
+        <input
+          class="col form-control"
+          type="text"
+          name="details"
+          [(ngModel)]="editLog.details"
+        />
+      </div>
 
-  <button class="btn btn-outline-primary"
-  (click)="setEditLog()">Edit</button>
-</div>
+      <div class="row">
+        <button class="btn btn-info col-auto" (click)="editLog = null">
+          Cancel
+        </button>
 
-<div id="logEdit"
-*ngIf="editLog"
-class="container">
-
-<form>
-    <div class="row">
-      <label class="col-auto form-label"
-      for="log">Log</label>
-      <input
-      class="col form-control"
-      type="text"
-      name="editLog"
-      [(ngModel)]="editLog.category" />
-      <br />
-
-    </div>
-    <div class="row">
-      <label class="col-auto form-label" for="details">Details</label>
-      <input class="col form-control" type="text" name="details" [(ngModel)]="editLog.details" />
-    </div>
-
-    <div class="row">
-      <button class="btn btn-info col-auto"
-      (click)="editLog = null">Cancel</button>
-
-      <button class="btn btn-primary col-auto"
-      (click)="updateLog(editLog)">Save</button>
-    </div>
-  </form>
-</div>
-
+        <button class="btn btn-primary col-auto" (click)="updateLog(editLog)">
+          Save
+        </button>
+      </div>
+    </form>
+  </div>
