added paths to other entities

--- a/ngLog/src/app/components/home/home.component.html
+++ b/ngLog/src/app/components/home/home.component.html
@@ -2,10 +2,10 @@
 
 <div>
   <form>
-    <div class="row">
+    <!-- <div class="row">
       <label class="col" for="logId">Log #</label>
       <input class="col" type="number" name="logId" [(ngModel)]="newLog.id" />
-    </div>
+    </div> -->
     <div class="row">
       <label class="col" for="category">Category</label>
       <input
