--- a/ngLog/src/app/components/navigation/navigation.component.html
+++ b/ngLog/src/app/components/navigation/navigation.component.html
@@ -14,20 +14,13 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" [routerLink]="['/contact']">Contact</a>
+          <a class="nav-link active" aria-current="page" [routerLink]="['/log']">Log List</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/about']">About</a>
+          <a class="nav-link" [routerLink]="['/maintenancelog']">Maintenance Log</a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/todo']">Todos</a>
-        </li>
-
-        <!-- <li class="nav-item">
-          <a class="nav-link disabled" [routerLink]="['/todo']">Todos</a>
-        </li> -->
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
