--- a/ngLog/src/app/components/navigation/navigation.component.html
+++ b/ngLog/src/app/components/navigation/navigation.component.html
@@ -29,3 +29,27 @@
     </div>
   </div>
 </nav>
+
+<!--
+<div class="row-auto">
+  <nav class="navbar navbar-dark bg-dark">
+    <a [routerLink]="['/home']" class="navbar-link">
+      <button class="btn btn-success" type="button">Home</button></a
+    >
+    <a [routerLink]="['/parks']" class="nav-link">
+      <button class="btn btn-primary" type="button" (click)="clearSelectedPark()">Parks</button></a
+    >
+    <a [routerLink]="['/gallery']" class="nav-link">
+      <button class="btn btn-primary" type="button">Gallery</button></a
+    >
+    <a [routerLink]="['/register']" class="nav-link">
+      <button class="btn btn-info" type="button"*ngIf="!checkLoginStatus()">Register</button></a
+    >
+    <a [routerLink]="['/users']" class="nav-link">
+      <button (click)="clearSelectedUser()" class="btn btn-warning" type="button"*ngIf="checkLoginStatus()">User Page</button></a
+    >
+    <app-login *ngIf="!checkLoginStatus()" (loginSuccess)="handleLoginSuccess($event)">Login</app-login>
+
+    <app-logout *ngIf="checkLoginStatus()" [loggedInUser] = "loggedInUser"></app-logout>
+  </nav>
+  </div> -->
