--- a/ngLog/src/app/app.component.html
+++ b/ngLog/src/app/app.component.html
@@ -1,7 +1,9 @@
 <app-navigation></app-navigation>
+<!-- <app-home></app-home> -->
 
 <main class="container-fluid">
   <router-outlet></router-outlet>
+  <div class="backgroud-image"></div>
 </main>
 
 <html>
@@ -11,10 +13,17 @@
 </head>
 <body>
 
+  <div class="left-half">
+
+  </div>
+
+  <div class="right-half">
+
+  </div>
+
 <div class="slide-container">
   <img class="slide-picture" class="slideDirection" src="https://assets.sailboat.guide/3e1llnbl2fgzyntfyb8r7wevyx20" alt="Slide Picture">
 </div>
-<button (click)="addSlideClass()">Slide Right</button>
 
 
 <footer>
