starting over event tracker

--- a/ngLog/src/app/components/home/home.component.html
+++ b/ngLog/src/app/components/home/home.component.html
@@ -1,13 +1,13 @@
-<h1>Log Adventure Home</h1>
+<!-- <h1>Log Adventure Home</h1>
 
 
 <div class="container-newLogDiv">
   <form class="form-container">
 
-    <!-- <div class="row">
+     <div class="row">
       <label class="col" for="logId">Log #</label>
       <input class="col" type="number" name="logId" [(ngModel)]="newLog.id" />
-    </div> -->
+    </div>
 
       <label class="form-label" for="category">Category</label>
       <input
@@ -51,9 +51,11 @@
 
 <h2>
   <ul>
-    <li *ngFor="let log of logList" >{{ logList }}</li>
+    <li *ngFor="let log of logList" >
+      {{ newLog }}
+    </li>
   </ul>
-</h2>
+</h2> -->
 
 <!-- <div id="logListDiv" *ngIf="!selected">
   <table>
