--- a/ngLog/src/app/app.component.html
+++ b/ngLog/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navigation></app-navigation>
-<!-- <app-home></app-home> -->
+<app-home></app-home>
 
 <main class="container-fluid">
   <router-outlet></router-outlet>
@@ -32,5 +32,3 @@
 
 </body>
 </html>
-
-
